force-app/main/default/objects/Prospect__c/Prospect__c.object-meta.xml
<CustomObject>
    <label>Prospect</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Prospect Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prospects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>