force-app/main/default/objects/Prospect__c/fields/Collected_By__c.field-meta.xml
<CustomField>
    <fullName>Collected_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the sales rep who collected the lead. You may want to reach out for more information</inlineHelpText>
    <label>Collected By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Prospects2</relationshipName>
    <type>Lookup</type>
</CustomField>