force-app/main/default/objects/Prospect__c/fields/Commercial_Notes__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>These are notes collected by the commercial team during the qualifying process</inlineHelpText>
    <label>Campaign Messaging</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>