force-app/main/default/objects/Prospect__c/fields/Converted_To_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Converted_To_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted To Opportunity</label>
    <type>Checkbox</type>
</CustomField>