force-app/main/default/objects/Prospect__c/fields/Date_Time_Closed__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Closed__c</fullName>
    <description>This is when the lead was set to a stage of closed</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Time Closed</label>
    <type>DateTime</type>
</CustomField>