force-app/main/default/objects/Prospect__c/fields/Date_Time_Opened__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Opened__c</fullName>
    <description>this is the date the record was opened (based on stage) and started to be worked on</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Time Opened</label>
    <type>DateTime</type>
</CustomField>