force-app/main/default/objects/Prospect__c/fields/Distributor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>These are notes filled out by the distributor/ territory during the qualification process</inlineHelpText>
    <label>Distributor Notes</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>