force-app/main/default/objects/Prospect__c/fields/Existing_Business__c.field-meta.xml
<CustomField>
    <fullName>Existing_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing Business</label>
    <type>Checkbox</type>
</CustomField>