force-app/main/default/objects/Prospect__c/fields/Hospital_Account__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The hospital this record is associated with</inlineHelpText>
    <label>Hospital Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prospects</relationshipLabel>
    <relationshipName>Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>