force-app/main/default/objects/Prospect__c/fields/Marketing_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Segmentation__c</fullName>
    <label>Marketing Segmentation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_Segmentation</valueSetName>
    </valueSet>
</CustomField>