force-app/main/default/objects/Prospect__c/fields/Not_Qualified_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Not_Qualified_Competitor__c</fullName>
    <label>Not Qualified Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>US_Ortho_Competitors</valueSetName>
    </valueSet>
</CustomField>