force-app/main/default/objects/Prospect__c/fields/Not_Qualified_Notes__c.field-meta.xml
<CustomField>
    <fullName>Not_Qualified_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Not Qualified Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>