force-app/main/default/objects/Prospect__c/fields/Not_Qualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Not_Qualified_Reason__c</fullName>
    <label>Not Qualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>