force-app/main/default/objects/Prospect__c/fields/Parent_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the opportunity that spawned this &apos;cross - sell &apos; record . It can be helpful to look who owns it so that you can collaborate with them</inlineHelpText>
    <label>Parent  Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Prospects</relationshipLabel>
    <relationshipName>Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>