force-app/main/default/objects/Prospect__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The &apos;product type&apos; options are based on the &apos;product&apos; chosen</inlineHelpText>
    <label>Product Type</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>