force-app/main/default/objects/Prospect__c/fields/Show_Event_Notes__c.field-meta.xml
<CustomField>
    <fullName>Show_Event_Notes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>These are specific notes gathered by zimmer biomet about the lead at the show</inlineHelpText>
    <label>Show/Event Notes</label>
    <length>50000</length>
    <type>LongTextArea</type>
</CustomField>