force-app/main/default/objects/Prospect__c/fields/Surgeon__c.field-meta.xml
<CustomField>
    <fullName>Surgeon__c</fullName>
    <label>Surgeon</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prospects (Surgeon)</relationshipLabel>
    <relationshipName>Lead_Prospects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>