force-app/main/default/objects/Prospect__c/fields/Surgeon_Product__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Product__c</fullName>
    <formula>Parent_Opportunity__r.SurgeonName__c  +&apos; &apos;+ TEXT( Product__c )</formula>
    <inlineHelpText>The combination of the surgeon and product</inlineHelpText>
    <label>Surgeon &amp; Product</label>
    <type>Text</type>
</CustomField>