force-app/main/default/objects/Prospect__c/recordTypes/Cross_Sell.recordType-meta.xml
<RecordType>
    <fullName>Cross_Sell</fullName>
    <active>true</active>
    <description>This is for internally generated leads prospects for the sales rep to act on</description>
    <label>Cross Sell</label>
</RecordType>