force-app/main/default/objects/Prospect__c/recordTypes/DownStreamMarketing.recordType-meta.xml
<RecordType>
    <fullName>DownStreamMarketing</fullName>
    <active>true</active>
    <description>This is to be used by the downstream marketing team</description>
    <label>DownStreamMarketing</label>
</RecordType>