force-app/main/default/objects/Prospect__c/recordTypes/Doximity.recordType-meta.xml
<RecordType>
    <fullName>Doximity</fullName>
    <active>true</active>
    <label>Doximity</label>
</RecordType>