force-app/main/default/objects/Prospect__c/recordTypes/ROSA.recordType-meta.xml
<RecordType>
    <fullName>ROSA</fullName>
    <active>true</active>
    <description>This is to be used by US Ortho team and when qualified passed on to the ROSA Team</description>
    <label>ROSA</label>
</RecordType>