force-app/main/default/objects/Prospect__c/recordTypes/ZBEdge.recordType-meta.xml
<RecordType>
    <fullName>ZBEdge</fullName>
    <active>true</active>
    <description>Prospect records from ZBEdge Campaign events</description>
    <label>ZBEdge</label>
</RecordType>